# s3_sync_script

./: .env.template  .gitignore  Makefile  README.md  main.py  pyproject.toml  target_dirs.py.template
